Fixed the gaps between colums and aligned the columns

--- a/src/App.css
+++ b/src/App.css
@@ -34,30 +34,24 @@ h1 {
   color: black;
 }
 p {
-  color: black
+  color: black;
 }
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: auto auto auto;
   grid-template-rows: auto;
   column-gap: 10px;
+  align-content: center;
+  
 }
 
 .column {
   background-color: white;
-  padding: 10px 20px;
-  text-align: center;
-  width: 30px 50px 30px;
+  padding: 10px 10px;
+  column-width: auto;
 }
 
-.left, .right {
-  width: 25%;
-}
-
-.middle {
-  width: 50%;
-}
 
 .App-link {
   color: #61dafb;
